--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
 	<main>
 	  <ul class="centeritems">
 	    <li><a href="assign02.html">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></li>
-		<li><a href="assign03.html">Assignment #3</a></li>
-		<li><a href="assign04.html">Assignment #4</a></li>
-		<li><a href="assign05.html">Assignment #5</a></li>
-		<li><a href="assign06.html">Assignment #6</a></li>
-		<li><a href="assign07.html">Assignment #7</a></li>
-		<li><a href="assign08.html">Assignment #8</a></li>
-		<li><a href="assign09.html">Assignment #9</a></li>
-		<li><a href="assign10.html">Assignment #10</a></li>
-		<li><a href="assign11.html">Assignment #11</a></li>
-		<li><a href="assign12.html">Assignment #12</a></li>
-		<li><a href="assign13.html">Assignment #13</a></li>
+	    <li><a href="assign03.html">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></li>
+	    <li><a href="assign04.html">JSON Parse, Stringify</a></li>
+	    <li><a href="assign05.html">Using XMLHTTPRequest to Consume a JSON Web Service</a></li>
+	    <li><a href="assign06.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></li>
+	    <li><a href="assign07.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></li>
+	    <li><a href="assign08.html">Manipulating CSS Class Properties Using JavaScript</a></li>
+	    <li><a href="assign09.html">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></li>
+	    <li><a href="assign10.html">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events</a></li>
+	    <li><a href="assign11.html">HTML5 Tags - Video, Audio, and Canvas</a></li>
+	    <li><a href="assign12.html">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries (Thought Library)</a></li>
+	    <li><a href="assign13.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries (Thought Library)</a></li>
+	    <li><a href="assign13.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries (Thought Library)</a></li>
 	  </ul>
 	</main>
 	<footer>
